--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
 import DefaultLayout from "../layouts/Default.astro";
+import Header from "../sections/Header"
+import Hero from "../sections/Hero";
 ---
 
 <DefaultLayout>
-  <h1>Hello world</h1>
+  <Header />
+  <Hero />
 </DefaultLayout>
