--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,10 @@
 
 html {
   background-color: #18181b ;
+  overflow-x: hidden;
 }
+
+
 
 .font-header {
   font-family: "Inter", sans-serif !important;
