--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,25 @@
 ---
-import DefaultLayout from "../layouts/Default.astro";
+import DefaultLayout from "../layouts/Default.astro"
 import Header from "../sections/Header"
-import Hero from "../sections/Hero";
+import Hero from "../sections/Hero"
+import FeaturesCards from "../sections/FeaturesCards"
+import FeaturesGrid from "../sections/FeaturesGrid"
+import LatestPosts from "../sections/LatestPosts"
+import { getCollection } from "astro:content"
+import Testimonials from "../sections/Testimonials"
+
+const  posts = await getCollection("blog")
+const latestPosts = posts.sort((a, b) => {
+  if (a.data.pubDate.valueOf()  === b.data.pubDate.valueOf()) return 0;
+  return a.data.pubDate.valueOf() > b.data.pubDate.valueOf() ? -1 : 1;
+}).slice(0, 4)
 ---
 
 <DefaultLayout>
   <Header />
   <Hero />
+  <FeaturesCards />
+  <FeaturesGrid  />
+  <LatestPosts latestPosts={latestPosts} />
+  <Testimonials />
 </DefaultLayout>
