--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,5 +1,9 @@
 ---
 import "../styles/global.css";
+import Header from '../sections/Header';
+import Testimonials from "../sections/Testimonials";
+import CallToAction from "../sections/CallToAction";
+import Footer from "../sections/Footer";
 ---
 
 <!doctype html>
@@ -16,6 +20,10 @@ import "../styles/global.css";
     />
   </head>
   <body>
+    <Header client:load />
     <slot />
+    <Testimonials client:load />
+    <CallToAction client:load />
+    <Footer client:load />
   </body>
 </html>
