--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,19 +1,62 @@
 ---
-import { type CollectionEntry, getCollection } from 'astro:content';
+import { type CollectionEntry, getCollection } from "astro:content";
 // import BlogPost from '../../layouts/BlogPost.astro';
+import DefaultLayout from "../../layouts/Default.astro";
+import InteriorHero from "../../components/InteriorHero.astro";
+import { Tag } from "../../components/Tag";
+import { getPostColorFromCategory } from "../../utils/postUtils";
+import InteriorContent from "../../components/InteriorContent.astro";
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
-	}));
+  const posts = await getCollection("blog");
+  return posts.map((post) => ({
+    params: { slug: post.slug },
+    props: post,
+  }));
 }
-// type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<"blog">;
 
-// const post = Astro.props;
-// const { Content } = await post.render();
+const {
+  data: { title, description, category, author: { name, image,title: authorTitle }, pubDate },
+}: Props = Astro.props;
+const post: Props = Astro.props;
+const { Content } = await post.render();
 ---
-<div>
-	blog post
-</div>
+
+<DefaultLayout>
+  <InteriorHero>
+    <div class="relative">
+      <div class="flex justify-center">
+        <Tag colorClass={getPostColorFromCategory(category)}>
+          {category}
+        </Tag>
+      </div>
+      <h1
+        class="font-heading font-black md:text-6xl lg:text-7xl text-5xl text-center mt-4"
+      >
+        {title}
+      </h1>
+      <p
+        class="text-center text-xl md:text-2xl mt-6 text-zinc-400 max-w-2xl mx-auto"
+      >
+        {description}
+      </p>
+      <div class="flex flex-col items-center mt-8 ">
+        <div class="size-16 rounded-full bg-zinc-700/30 backdrop-blur-sm mt-8">
+        </div>
+				<div class="font-extrabold text-lg mt-3">
+					{name}
+				</div>
+				<div class="text-zinc-500 text-sm">
+					{authorTitle}
+				</div>
+      </div>
+    </div>
+  </InteriorHero>
+	<InteriorContent>
+			<div class="prose prose-invert prose-lg mx-auto prose-zinc prose-headings:font-heading prose-headings:font-black prose-h2:lg:text-5xl prose-h2:md:text-4xl prose-h2:font-black prose-h2:mt-8 prose-h2:mb-4 prose-h3:lg:text-4xl prose-h3:md:text-3xl prose-h3:font-black prose-h3:mt-8 prose-h3:mb-4 prose-p:text-lg prose-p:mt-4 prose-p:mb-6">
+				<Content />
+			</div>
+	</InteriorContent>
+
+</DefaultLayout>
